# Cognionics-Quick-20-ROS2-Bridge

./: .gitignore  CMakeLists.txt  README.md  opendev.c  remove.sh  setup.sh
etc/: q20.conf
ros2neuro_acquisition_lsl/: CMakeLists.txt  package.xml  plugin_lsl.xml
ros2neuro_acquisition_lsl/include/rosneuro_acquisition_lsl/: LSLDevice.hpp
ros2neuro_acquisition_lsl/src/: LSLDevice.cpp
ros2neuro_acquisition_lsl/test/: TestLslDevice.cpp
ros2neuro_quick20_ws/data/: read.py
ros2neuro_quick20_ws/src/ros2neuro_acquisition_lsl/: CMakeLists.txt  package.xml  plugin_lsl.xml
ros2neuro_quick20_ws/src/ros2neuro_acquisition_lsl/example/: run.cpp
ros2neuro_quick20_ws/src/ros2neuro_acquisition_lsl/include/rosneuro_acquisition_lsl/: LSLDevice.hpp
ros2neuro_quick20_ws/src/ros2neuro_acquisition_lsl/src/: LSLDevice.cpp
