<?xml version="1.0"?>
<package format="2">
  <name>ros2neuro_acquisition_lsl</name>
  <version>0.0.2</version>
  <description>ROS2NEURO Acquisition Plugin Package for LSL</description>
  <author email="luca.tonin@dei.unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@dei.unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <depend>ros2neuro_acquisition</depend>
  <depend>ros2neuro_data</depend>
  <depend>ros2neuro_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
	
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  
  <depend>liblsl</depend>
  <export>
	  <ros2neuro_acquisition plugin="${prefix}/plugin_lsl.xml"/>
  </export>
</package>
