<?xml version="1.0"?>
<package format="3">
    <name>ros2neuro_acquisition_lsl</name>
    <version>0.0.2</version>
    <description>ROS2NEURO Acquisition Plugin Package for LSL</description>
    <author email="shk.ync2005@gmail.com">Luca Tonin</author>
    <maintainer email="shk.ync2005@gmail.com">Luca Tonin</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>ament_cmake</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>

    <depend>ros2neuro_acquisition</depend>
    <depend>ros2neuro_data</depend>
    <depend>ros2neuro_msgs</depend>
        
    <build_depend>pluginlib</build_depend>
    <exec_depend>pluginlib</exec_depend>
    
    <depend>liblsl</depend>
    <export>
        <ros2neuro_acquisition plugin="${prefix}/plugin_lsl.xml"/>
        <build_type>ament_cmake</build_type>
    </export>
</package>
